<resources>
    <string name="aldready_favourite">WISHLISTED</string>
    <string name="so_tien_tra_hang_thang">Monthly Payment</string>
    <string name="vui_long_nhap_ten_va_sdt">PLEASE INPUT YOUR NAME AND PHONE NUMBER</string>
    <string name="chung_toi_se_gui_ma_xac_nhan_qua_sdt">We will send OTP code via your number!</string>
    <string name="ma_xac_nhan">OTP CODE</string>
    <string name="vui_long_nhap_ma_otp_da_gui_qua_sdt">Please input the OTP CODE was sent to your phone</string>
    <string name="vui_long_thiet_lap_mat_khau_cho_tk_cua_ban">PLEASE SET PASSWORD FOR YOUR ACCOUNT</string>
    <string name="tro_ly_thong_minh">Assistant</string>
    <string name="voice_assistant">Voice Assistant</string>
    <string name="tim_kiem">Search</string>
    <string name="san_pham_low">Product</string>
    <string name="tai_khoan_low">Profile</string>
    <string name="gio_hang_low">Cart</string>
    <string name="text_0_d">0 đ</string>
    <string name="ho_va_ten_2_cham">NAME:</string>
    <string name="ma">Code:</string>
    <string name="giao_hang">Delivery:</string>
    <string name="mua_sau">BUY LATER</string>
    <string name="khong_co_sp_trong_gio_hang_cua_ban">YOUR CART IS EMPTY.</string>
    <string name="san_pham_2_cham">Products:</string>
    <string name="danh_gia_2_cham">RATE:</string>
    <string name="gia">PRICE</string>
    <string name="thong_tin_khach_hang">USER INFORMATION</string>
    <string name="dien_thoai_2_cham">PHONE:</string>
    <string name="email_2_cham">EMAIL:</string>
    <string name="gioi_tinh_2_cham">GENDER:</string>
    <string name="ngay_sinh_2_cham">DATE OF BIRTH:</string>
    <string name="chinh_sua">EDIT</string>
    <string name="nhu_yeu_pham_hang_ngay">DAILY NECESSITIES</string>
    <string name="cap_nhat_dia_chi_email">EDIT EMAIL</string>
    <string name="text_0_pt_lai_suat_voi_the">INSTALLMENT WITH CREDIT CARD (0% INTEREST RATE)</string>
    <string name="dia_chi_2_cham">ADDRESS:</string>
    <string name="danh_gia_up_case">RATE</string>
    <string name="chi_tiet_up_case">Details</string>
    <string name="text_description_location"><![CDATA[This app require location permission, to recommended <BR>most releated product with </BR> <BR>your living area.</BR>]]></string>
    <string name="text_turn_on_location">TURN ON LOCATION</string>
    <string name="text_not_get_location">CAN NOT GET LOCATION</string>
    <string name="error_in_momo_payment">ERROR PROCESSING PAYMENT VIA MOMO </string>
    <string name="error_in_quickpay_payment">ERROR PROCESSING PAYMENT VIA QuickPay</string>
    <string name="error_in_viettel_payment">ERROR PROCESSING PAYMENT VIA Viettel Pay</string>
    <string name="error_in_vnpoay_payment">ERROR PROCESSING PAYMENT VIA VNPay</string>
    <string name="error_in_vinid_payment">ERROR PROCESSING PAYMENT VIA VinID</string>
    <string name="error_in_payment">ERROR PROCESSING PAYMENT VIA</string>
    <string name="text_to_cart">ADD TO CART</string>
    <string name="text_het_han_thanh_toan">PAYMENT EXPIRED</string>
    <string name="title_activity_invoice_infomation">InvoiceInfomationActivity</string>
    <string name="text_remark_invoice"><![CDATA[Please input your address to ensure <BR>the fastest delivery</BR>]]></string>
    <string name="text_user_data_error">User\'s data is incorrect</string>
    <string name="text_phone_blank_error">PLEASE INPUT PHONE NUMBER</string>
    <string name="text_phone_error">WRONG NUMBER</string>
    <string name="text_name_blank_error">PLEASE INPUT YOUR NAME </string>
    <string name="text_address_blank_error">PLEASE INPUT ADDRESS</string>
    <string name="cant_get_user_info">CANNOT GET USER\'S INFORMATION</string>
    <string name="status_confirming">CONFIRMING..</string>
    <string name="status_confirm">CONFIRMED</string>
    <string name="status_get_merchandise">DELIVERING..</string>
    <string name="status_gotten_merchandise">DELIVERED</string>
    <string name="status_delivery">Delivering..</string>
    <string name="status_delivered">Delivered </string>
    <string name="status_cancel_request">REQUEST CANCEL ORDER</string>
    <string name="status_cancel">Cancelled</string>
    <string name="status_returning_cart">RETURNING ORDER</string>
    <string name="status_returned_cart">Returned Order</string>
    <string name="status_refunded">Refunded</string>
    <string name="status_init">Newly created order</string>
    <string name="error_cant_get_delivery">Cannot get delivery information</string>
    <string name="text_name">FuLlname:</string>
    <string name="text_phone">Phone number:</string>
    <string name="text_order_is_not_change">This order cannot be changed</string>
    <string name="text_order_is_not_delete">This order cannot be deleted</string>
    <string name="text_order_is_not_cancel">This order cannot be canceled</string>
    <string name="text_id_not_conform">Unconfirmed Box ID</string>
    <string name="recieve_address_1">INPUT HOUSE NUMBER AND STREET NAME</string>
    <string name="product_suggest">YOU MAY ALSO LIKE</string>
    <string name="momo_error"><![CDATA[Momo Payment is in maintainence <BR>Please select a different payment method</BR>]]></string>
    <string name="moca_error"><![CDATA[Moca Payment is in maintainence <BR>Please select a different payment method</BR>]]></string>
    <string name="vnpay_error"><![CDATA[VNPay Payment is in maintainence <BR>Please select a different payment method</BR>]]></string>
    <string name="vinid_error"><![CDATA[VinID Payment is in maintainence <BR>Please select a different payment method</BR>]]></string>
    <string name="viettelpay_error"><![CDATA[ViettelPay Payment is in maintainence <BR>Please select a different payment method</BR>]]></string>
    <string name="exit_app"><![CDATA[Do you want to exit OMNI shop?</BR>]]></string>
    <string name="profile_address_delivery">Delivery infomation</string>
    <string name="profile_address_user">User\'s information</string>
    <string name="profile_edit_user_info">Edit user information</string>
    <string name="alt_address_can_not_delete_address">Unable to delete address</string>
    <string name="text_search">Search</string>
    <string name="text_search_voice">Voice search</string>
    <string name="we_dont_hear_that">Sorry, we can not hear that</string>
    <string name="text_search_no_result">There is no matched result, you might interested in..</string>
    <string name="not_match_location">Delivered only in %1$s</string>
    <string name="text_empty_cart">Your cart is empty</string>
    <string name="text_voucher">Voucher</string>
    <string name="text_save_voucher">Save voucher</string>
    <string name="reference_type_0">Product</string>
    <string name="reference_type_1">Category</string>
    <string name="reference_type_2">Products</string>
    <string name="voucher_type_0">Direct discount</string>
    <string name="voucher_type_1">Percentage discount</string>
    <string name="voucher_type_2">Freeship</string>
    <string name="target_type_0">All customers have voucher</string>
    <string name="target_type_1">Select customer</string>
    <string name="conditions_0">There is no other condition</string>
    <string name="conditions_1">Minimum value</string>
    <string name="text_time_exp">You can use this voucher from %1$s to %2$s</string>
    <string name="text_voucher_1">Input %1$s to get %2$s discount</string>
    <string name="text_highlight">Product with video</string>
    <string name="title_select_voucher">Select voucher</string>
    <string name="text_voucher_label">Voucher %1$s</string>
    <string name="select_other_voucher">Select other voucher</string>
    <string name="text_accept">Yes</string>
    <string name="text_reject">No</string>
    <string name="text_exit_payment"><![CDATA[The payment is not completed,<BR>do you want to exit?</BR>]]></string>
    <string name="shipping_date_tr">The order is expected to be delivered on tomorrow</string>
    <string name="error_voucher_1">Item is not eligible</string>
    <string name="error_voucher_2">The orders are not reached minimum value</string>
    <string name="text_prepare_listen">Please say</string>
    <string name="text_listening">Listening...</string>
    <string name="text_progressing">Processing...</string>
    <string name="text_error_phone">Your number is not valid, please try again</string>
    <string name="error_in_moca_payment">There was an error during the payment process with Moca</string>
    <string name="title_dialog_renew_qr">QR code is expired, do you want to refresh?</string>
    <string name="title_dialog_remain_qr">%1$s left to finish your payment</string>
    <string name="product_quatify">Product (%1$s)</string>
    <string name="text_live">Allwayshop Live</string>
    <string name="text_lived">The content has been broadcast live</string>
    <string name="text_collection">Collection</string>
    <string name="text_for_u">Just for you</string>
    <string name="text_promotion">Promotion</string>
    <string name="text_hotdeal">Hot deal</string>
    <string name="text_market">Online Market</string>
    <string name="text_hot_store">Outstanding brandshop</string>
    <string name="text_is_like">You might also like</string>
    <string name="text_best_seller">Top 10 Best Selling Products of the Week</string>
    <string name="text_hot_key">Trending keywordset</string>
    <string name="text_history">Viewed products</string>
    <string name="text_u_like">You wishlist</string>
    <string name="text_cart">Cart</string>
    <string name="text_back_home">Back to homepage</string>
    <string name="text_detail_search">Search</string>
    <string name="text_guarantee">Warranty</string>
    <string name="wish_list">Wishlist</string>
    <string name="add_to_cart_all_cap">Add to cart</string>
    <string name="buy_now_all_cap">Buy now</string>
    <string name="text_warranty">Warranty policy</string>
    <string name="text_delivery_type">Delivery method</string>
    <string name="text_return">Return policy</string>
    <string name="text_suggest_search">Suggestion</string>
    <string name="text_product_result">%1$s result(s) of product</string>
    <string name="text_product_store_result">%1$s result(s) of mall</string>
    <string name="text_interesting_product">You may also like</string>
    <string name="text_top_keyword">Trending searches</string>
    <string name="text_back_all_cap">Back</string>
    <string name="text_remove_item_in_cart">Do you want to remove “%1$s” from cart?</string>
    <string name="text_number_item_cart">• %1$s product(s)</string>
    <string name="more_product_checkout">and %1$s more</string>
    <string name="hot">Highlight</string>
    <string name="new_arrival">New arrival</string>
    <string name="pay_success_">Payment successful</string>
    <string name="text_nhap_so_dt">Input your phone number</string>
    <string name="dang_nhap">Log-in</string>
    <string name="so_luong">Quantity</string>
    <string name="text_input_phone_login">Please input your phone number and password.</string>
    <string name="password">Input password</string>
    <string name="text_input_google_login">Open below url on mobile / desktop and input the pass-code</string>
    <string name="text_input_sub_google_login">Then finish login on that device</string>
    <string name="text_link_auth">Website URL</string>
    <string name="text_code_auth">Pass-code</string>
    <string name="text_timeout_auth">Expired after</string>
    <string name="re_new">Reload</string>
    <string name="milestone_phone">@string/so_dien_thoai</string>
    <string name="milestone_confirm_order">Order\'s summary</string>
    <string name="milestone_order_information">Order\'s details</string>
    <string name="milestone_payment_method">Payment methods</string>
    <string name="milestone_result">Result</string>
    <string name="milestone_name">Recipient\'s name</string>
    <string name="milestone_address">Recipient\'s address</string>
</resources>