<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sfView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_5sdp"
    android:background="@color/color_transparent"
    android:orientation="vertical">

    <com.bda.omnilibrary.views.SfTextView
        android:id="@+id/name"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="wrap_content"
        android:ellipsize="end"

        android:maxLines="1"
        android:text="@string/san_pham_low"
        android:textColor="@color/title_black"
        android:textSize="@dimen/_6ssp"
        sfView:type="regular" />

    <com.bda.omnilibrary.views.SfTextView
        android:id="@+id/quantity"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/name"
        android:layout_marginLeft="@dimen/_2sdp"

        android:text="@string/so_luong"
        android:textAlignment="center"
        android:textColor="@color/title_black"
        android:textSize="@dimen/_6ssp"
        sfView:type="regular" />

    <com.bda.omnilibrary.views.SfTextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"

        android:text="@string/gia"
        android:textColor="@color/title_black"
        android:textSize="@dimen/_6ssp"
        sfView:type="regular" />

</RelativeLayout>