<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/_4sdp"
    android:layout_width="@dimen/_288sdp"
    android:layout_height="@dimen/_30sdp"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center_horizontal">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/step"
        android:layout_width="@dimen/_248sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/milestone_step_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.bda.omnilibrary.views.SfTextView
            android:id="@+id/step_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/milestone_phone"
            android:textAlignment="center"
            android:textColor="@color/color_41AE96"
            android:textSize="@dimen/_7ssp"
            app:type="bold" />

        <com.bda.omnilibrary.views.SfTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:maxLines="1"
            android:text="@string/milestone_name"
            android:textAlignment="center"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/_7ssp"
            app:type="bold" />

        <com.bda.omnilibrary.views.SfTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/milestone_address"
            android:textAlignment="center"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/_7ssp"
            app:type="bold" />

    </LinearLayout>

</RelativeLayout>